# tree-sitter-less

./: Cargo.toml  LICENSE.md  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
bindings/c/: tree-sitter-less.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_less/: binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLess/: less.h
examples/: AtRun.less  Extend.less  Function.less  MergeProperties.less  Mixins.less  Variables.less  example.less
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: declarations.txt  examples.txt  statements.txt  stylesheets.txt
