[package]
name = "tree-sitter-less"
description = "LESS grammar for tree-sitter"
version = "1.0.0"
authors = ["Jimliang <jimlianglinux@gmail.com>"]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "less"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/jimliang/tree-sitter-less"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.21.0"

[build-dependencies]
cc = "1.0.92"
